--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -37,6 +37,15 @@
           }
         }
       }
+    },
+    {
+      "type": "java (build)",
+      "paths": ["${workspace}"],
+      "isFullBuild": true,
+      "group": "build",
+      "problemMatcher": [],
+      "label": "java (build): Build Workspace",
+      "detail": "$(tools) Build all the Java projects in workspace."
     }
   ]
 }
